Add: server support variablepresentation
