# server/openapi_server/models/standard_variable.py
@@ -1,0 +1,144 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model_ import Model
+from openapi_server import util
+
+
+class StandardVariable(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, description=None, id=None, label=None, type=None):  # noqa: E501
+        """StandardVariable - a model defined in OpenAPI
+
+        :param description: The description of this StandardVariable.  # noqa: E501
+        :type description: List[str]
+        :param id: The id of this StandardVariable.  # noqa: E501
+        :type id: List[str]
+        :param label: The label of this StandardVariable.  # noqa: E501
+        :type label: List[str]
+        :param type: The type of this StandardVariable.  # noqa: E501
+        :type type: List[str]
+        """
+        self.openapi_types = {
+            'description': List[str],
+            'id': List[str],
+            'label': List[str],
+            'type': List[str]
+        }
+
+        self.attribute_map = {
+            'description': 'description',
+            'id': 'id',
+            'label': 'label',
+            'type': 'type'
+        }
+
+        self._description = description
+        self._id = id
+        self._label = label
+        self._type = type
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'StandardVariable':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The StandardVariable of this StandardVariable.  # noqa: E501
+        :rtype: StandardVariable
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def description(self):
+        """Gets the description of this StandardVariable.
+
+
+        :return: The description of this StandardVariable.
+        :rtype: List[str]
+        """
+        return self._description
+
+    @description.setter
+    def description(self, description):
+        """Sets the description of this StandardVariable.
+
+
+        :param description: The description of this StandardVariable.
+        :type description: List[str]
+        """
+
+        self._description = description
+
+    @property
+    def id(self):
+        """Gets the id of this StandardVariable.
+
+
+        :return: The id of this StandardVariable.
+        :rtype: List[str]
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id):
+        """Sets the id of this StandardVariable.
+
+
+        :param id: The id of this StandardVariable.
+        :type id: List[str]
+        """
+
+        self._id = id
+
+    @property
+    def label(self):
+        """Gets the label of this StandardVariable.
+
+
+        :return: The label of this StandardVariable.
+        :rtype: List[str]
+        """
+        return self._label
+
+    @label.setter
+    def label(self, label):
+        """Sets the label of this StandardVariable.
+
+
+        :param label: The label of this StandardVariable.
+        :type label: List[str]
+        """
+
+        self._label = label
+
+    @property
+    def type(self):
+        """Gets the type of this StandardVariable.
+
+
+        :return: The type of this StandardVariable.
+        :rtype: List[str]
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type):
+        """Sets the type of this StandardVariable.
+
+
+        :param type: The type of this StandardVariable.
+        :type type: List[str]
+        """
+        if type is None:
+            raise ValueError("Invalid value for `type`, must not be `None`")  # noqa: E501
+
+        self._type = type
