# server/openapi_server/openapi/openapi.yaml
@@ -18,6 +18,44 @@ servers:
 - url: https://dev.api.models.mint.isi.edu/v0.0.2
 - url: http://localhost:8080/v0.0.2
 paths:
+  /datasetspecification/{id}/variablepresentations:
+    get:
+      description: Gets a list of all `VariablePresentation` entities.
+      operationId: datasetspecification_id_variablepresentations_get
+      parameters:
+      - description: To obtain the results maintained by the MINT project, you must
+          not set up the variable. If you want the results of a user, you must set
+          up the variable with the username
+        explode: true
+        in: query
+        name: username
+        required: false
+        schema:
+          type: string
+        style: form
+      - description: A unique identifier for a `DatasetSpecification`.
+        explode: false
+        in: path
+        name: id
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/VariablePresentation'
+                type: array
+          description: Successful response - returns an array of `VariablePresentation`
+            entities.
+      security: []
+      summary: List variable presentations related with a datasetspecification
+      tags:
+      - variablespresentations
+      x-openapi-router-controller: openapi_server.controllers.variablespresentations_controller
   /datasetspecifications:
     get:
       description: Gets a list of all `datasetspecification` entities.
@@ -1222,38 +1260,82 @@ components:
         usesUnit:
           id: USD_kg_1M_1
       properties:
-        id:
-          type: string
-        type:
+        hasDefaultValue:
+          items:
+            type: number
+          nullable: true
+          type: array
+        hasStandardVariable:
+          items:
+            $ref: '#/components/schemas/StandardVariable'
+          nullable: true
+          type: array
+        hasMaximumAcceptedValue:
+          items:
+            type: number
+          nullable: true
+          type: array
+        hasConstraint:
+          items:
+            type: string
+          nullable: true
+          type: array
+        description:
           items:
             type: string
           nullable: true
           type: array
         label:
-          nullable: true
-          type: string
-        description:
-          nullable: true
-          type: string
-        hasLongName:
-          nullable: true
-          type: string
-        hasShortName:
-          nullable: true
-          type: string
-        hasStandardVariable:
           items:
-            $ref: '#/components/schemas/DatasetSpecification'
+            type: string
+          nullable: true
+          type: array
+        type:
+          items:
+            type: string
+          nullable: true
+          type: array
+        hasLongName:
+          items:
+            type: string
           nullable: true
           type: array
         hasRelevanceLevel:
-          format: int64
+          items:
+            type: number
           nullable: true
-          type: integer
+          type: array
+        hasShortName:
+          items:
+            type: string
+          nullable: true
+          type: array
+        hasMinimumAcceptedValue:
+          items:
+            type: number
+          nullable: true
+          type: array
+        hasDataset:
+          items:
+            $ref: '#/components/schemas/DatasetSpecification'
+          type: array
+        influencesProcess:
+          items:
+            $ref: '#/components/schemas/Process'
+          type: array
+        influencesVariablePresentation:
+          items:
+            $ref: '#/components/schemas/VariablePresentation'
+          type: array
+        id:
+          type: string
         usesUnit:
-          $ref: '#/components/schemas/Unit'
+          items:
+            $ref: '#/components/schemas/Unit'
+          nullable: true
+          type: array
       required:
-      - id
+      - type
       type: object
     User:
       example:
@@ -1394,6 +1476,31 @@ components:
           type: string
       required:
       - id
+      type: object
+    StandardVariable:
+      properties:
+        description:
+          items:
+            type: string
+          nullable: true
+          type: array
+        id:
+          items:
+            type: string
+          nullable: false
+          type: array
+        label:
+          items:
+            type: string
+          nullable: true
+          type: array
+        type:
+          items:
+            type: string
+          nullable: true
+          type: array
+      required:
+      - type
       type: object
   securitySchemes:
     BearerAuth:
